Overlay color change complete!

--- a/styles/main.css
+++ b/styles/main.css
@@ -177,7 +177,7 @@ main, #messages-card {
   }
   #user-container {
     top: 72px;
-    background-color: #d10221;
+    background-color: rgb(209,2,33);
     height: 38px;
     padding-top: 3px;
     padding-right: 2px;
